--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="google-site-verification" content="s7InLJ0J2VnzY3y_JxFQwNi_OyS8Dlvd2bAIT53bNTM" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Data Zone Ghana | Premium Mobile Data Bundles</title>
     <meta name="description" content="Buy MTN, AirtelTigo & Telecel data bundles at the best prices in Ghana. Fast delivery, reliable service.">
