--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
           </div>
           <h2>DATA ZONE GHANA</h2>
         </div>
+<p class="modal-subtitle">Secure access to your data bundles</p>
       </div>
 
       <div class="auth-tabs">
