--- a/index.html
+++ b/index.html
@@ -640,8 +640,8 @@
               <i class="fas fa-envelope"></i>
               <div>
                 <h4>Email Support</h4>
-                <p>support@datazonegh.com</p>
-                <small>Response within 2 hours</small>
+                <p>brightsany300@gmail.com</p>
+                <small>Response within 1 hours</small>
               </div>
             </div>
           </div>
