--- a/index.html
+++ b/index.html
@@ -522,8 +522,8 @@
                 <i class="fas fa-envelope"></i>
                 <div>
                   <p><strong>Email</strong></p>
-                  <p>support@datazonegh.com</p>
-                  <small>Response within 2 hours</small>
+                  <p>brightsany300@gmail.com/p>
+                  <small>Response within 1 hours</small>
                 </div>
               </div>
             </div>
